info-emails -style revisions

--- a/info-email.html
+++ b/info-email.html
@@ -122,7 +122,7 @@
                       <td class="wrapper">
                         <table class="eight columns">
                           <tr>
-                            <td>
+                            <td class="text-pad">
                               <div block="editable" name="Left Content" description="Insert the content of your left article." id="nav" key="nav" display="rich">What is in this edition with links in bullet point form.</div>
                               <br>
                               <div block="editable" name="Left Headline" description="Insert the headline to your left article." id="leftheadline" key="leftheadline" display="rich" style="font-size:24px; color:#3c2014; font-weight:bold;">Left Headline</div>
