cross-client tweaks

--- a/tips-email.html
+++ b/tips-email.html
@@ -797,7 +797,7 @@ body.outlook p {
                       <td class= "wrapper last"  >
                         <table class="twelve columns">
                           <tr>
-                            <td class="text-pad" style="color:#3c2014; font-size:32pt;text-align:center;">
+                            <td class="text-pad" style="color:#3c2014; font-size:32pt;text-align:center;line-height:22px;">
                               <div block="editable" name="Product Content" description="Insert a description of the product." id="bannertext" key="bannertext" display="rich">Tips for Your Simple Life</div>
                             </td>
                           </tr>
