--- a/base/postcard-top-product.html
+++ b/base/postcard-top-product.html
@@ -33,6 +33,36 @@
                 <td>
                   <!-- build:section layout.header -->
                   <!-- /build -->
+                  <table class="row">
+                    <tr>
+                      <td class="wrapper" style="padding-left:10px;">
+                        <table class="eight columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product3bimage" display="rich"><img src="http://placehold.it/300x300" height="300px" width="300px" /></div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product3btext" display="rich">Editable content blocks that are not modified will appear blank and surrounding content will be shifted accordingly.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td class="wrapper last">
+                        <table class="four columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Primary Content" description="Insert the content of your main article." id="maintext" key="maintext" display="rich">Banner for special sale</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
                   <!-- build:section layout.nav -->
                   <!-- /build -->
                   <div section="3"><!-- Start of Body -->
