--- a/base/postcard.html
+++ b/base/postcard.html
@@ -35,12 +35,64 @@
                   <!-- /build -->
                   <!-- build:section layout.nav -->
                   <!-- /build -->
-                  <div section="3"><!-- Start of Body -->
-                  <!-- build:section layout.fourColumn -->
-                  <!-- /build -->
-                  </div><!-- End of Body -->
-                  <!-- build:section layout.footer -->
-                  <!-- /build -->
+                  <table class="row"><!-- Start of Body -->
+                    <tr>
+                      <td class="wrapper">
+                        <table class="twelve columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="bannertext" key="bannertext" display="rich">Editable content blocks that are not modified will appear blank and surrounding content will be shifted accordingly. Try clicking the 'Show Preview' button to check it out and be sure to use an Inbox Preview for additional testing. To further customize this layout, you can copy the default template over to a custom one to edit the HTML.</div>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table><!-- End of Body -->
+                  <table class="row footer"><!-- Begin Two Column Lehman's Footer -->
+                    <tr>
+                      <td class="wrapper" style="border-right: solid #E2DCCF 1px">
+                        <table class="six columns">
+                          <tr>
+                            <td class="center" style="color: #3C2014;font-size: 14pt;font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, sans-serif;vertical-align: middle;">
+                            <center>
+                            <a href="https://www.lehmans.com/" title="lowerLogo" target="_blank"><img class="center" src="http://newsletter.lehmans.com/email/topBanner/logo.gif" width="100" style="display:block; width:100px;" border="0"></a><br>Call to order: %%!account_telephone%%<br><a style="color:#E54B26" href="https://www.lehmans.com/" target="_blank">www.lehmans.com</a>
+                            </center>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td class="wrapper" style="padding-left:10px">
+                        <table class="six columns">
+                          <tr>
+                            <td class="center" style="color: #3C2014;font-size: 16pt;font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, sans-serif;vertical-align: middle;">
+                              <center>
+                                <a href="https://www.lehmans.com/t-satisfaction-guarantee.aspx" title="guarantee" target="_blank"><img src="http://newsletter.lehmans.com/email/topBanner/jay.gif" height="100" style="display:block;" border="0" align="left" /></a> All products<br />covered by our<br /><a href="https://www.lehmans.com/" style="color:#E54B26;" target="_blank"><strong>100% Guarantee</strong></a>
+                              </center>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <table class="row">
+                    <tr>
+                      <td class="wrapper">
+                        <table class="twelve columns">
+                          <tr>
+                            <td class="center">
+                              <center>
+                                <a href="%%!manage_url%%" style="color:#E54B26">Manage Your Subscription</a><br>This shopping alert is sent to our valued email customers as a special courtesy.<br>If you prefer not to recieve future alerts, <a href="%%!unsubscribe_url%%" style="color:#E54B26">click here</a> to let us know.
+                            <div style="padding-top:10px;">%%!account_address%%</div>
+                              </center>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <!--End Two Column Lehman's Footer -->
                 </td>
               </tr>
             </table>
