--- a/base/tips-email.html
+++ b/base/tips-email.html
@@ -36,8 +36,41 @@
                   <!-- build:section layout.nav -->
                   <!-- /build -->
                   <div section="3"><!-- Start of Body -->
-                  <!-- build:section layout.fourColumn -->
-                  <!-- /build -->
+                  <table class="row">
+                    <tr>
+                      <td class="wrapper">
+                        <table class="eight columns">
+                          <tr>
+                            <td class="text-pad">
+                              <div block="editable" name="Left Content" description="Insert the content of your left article." id="nav" key="nav" display="rich">What is in this edition with links in bullet point form.</div>
+                              <br>
+                              <div block="editable" name="Left Headline" description="Insert the headline to your left article." id="leftheadline" key="leftheadline" display="rich" style="font-size:24px; color:#3c2014; font-weight:bold;">Left Headline</div>
+                              <br />
+                              <div block="editable" name="Left Content" description="Insert the content of your left article." id="lefttext" key="lefttext" display="rich">Editable content blocks that are not modified will appear blank and surrounding content will be shifted accordingly. Try clicking the 'Show Preview' button to check it out and be sure to use an Inbox Preview for additional testing. To further customize this layout, you can copy the default template over to a custom one to edit the HTML.</div>
+                              <table class="button success">
+                                <tr>
+                                  <td>
+                                    <a href="#">Call to Action</a>
+                                  </td>
+                                </tr>
+                              </table>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td class="wrapper last">
+                        <table class="four columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Right Headline" description="Insert the headline to your right article." id="rightheadline" key="rightheadline" display="rich">Special offers side bar</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
                   </div><!-- End of Body -->
                   <!-- build:section layout.footer -->
                   <!-- /build -->
