--- a/base/top-products.html
+++ b/base/top-products.html
@@ -33,12 +33,141 @@
                 <td>
                   <!-- build:section layout.header -->
                   <!-- /build -->
-                  <!-- build:section layout.nav -->
-                  <!-- /build -->
-                  <div section="3"><!-- Start of Body -->
-                  <!-- build:section layout.fourColumn -->
-                  <!-- /build -->
-                  </div><!-- End of Body -->
+                  <table class="row"><!-- Centered Header -->
+                    <tr>
+                      <td class="wrapper last">
+                        <table class="twelve columns">
+                          <tr>
+                            <td class="center" style="color:#749532;font-size: 32pt;line-height:41px;">
+                              <center>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="bannertext" key="bannertext" display="rich">Strong Graphic, Large Headline Announcing Offer</div>
+                              </center>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table><!--end Centered Header -->
+                  <table class="row"><!-- Start of Body -->
+                    <tr>
+                      <td class="wrapper" style="padding-left:10px;">
+                        <table class="six columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="lgImage" key="product1image" display="rich"><img src="http://placehold.it/275x275" width="275" height="275" style="display:block;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="lgImgText" key="product1text" display="rich">1-Editable content blocks that are not modified will appear blank and surrounding content will be shifted accordingly. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div> 
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td class="wrapper">
+                        <table class="three columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td class="wrapper last">
+                        <table class="three columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <table class="row"><!-- 2nd row -->
+                    <tr>
+                      <td class="wrapper" style="padding-left:10px">
+                        <table class="three columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td class="wrapper">
+                        <table class="three columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td class="wrapper">
+                        <table class="three columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                        <td class="wrapper last" style="padding-right:10px">
+                        <table class="three columns">
+                          <tr>
+                            <td>
+                              <div block="editable" name="Product Image" description="Image 140px wide - use Appearance>Style>display:block;" id="4grid3image" key="product2image" display="rich"><img src="http://placehold.it/140x140" width="140" height="140" style="display:block; max-width:100%; height:auto;" /></div>
+                              <div block="editable" name="Product Content" description="Insert a description of the product." id="4grid3text" key="product2text" display="rich">2-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin.</div>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+                      </td>
+                      </td>
+                    </tr>
+                  </table><!-- End of Body -->
                   <!-- build:section layout.footer -->
                   <!-- /build -->
                 </td>
